--- a/views/docs/androidguide.jade
+++ b/views/docs/androidguide.jade
@@ -1,7 +1,7 @@
 extends docs_layout
 
 block content
-	div.row
+	div.row.main_clearformatting_invert
 		hr
 
 		h1(align="center") #{platform}-#{type} 
@@ -18,7 +18,7 @@ block content
 			<hr>
 
 			<h6>Step 1 - Download the latest Zzish e-mbaas-ador library</h6>
-			<p>Here's the link <a href="http://platform.zzish.com/resources/sdk/platform-sdk.zip">http://platform.zzish.com/resources/sdk/platform-sdk.zip</a> 
+			<p>Here's the link - COMING SOON
 			<hr>
 			<h6>Step 2 - Unzip file</h6>
 			<p>The file contains two libraries; the e-mbaas-asdor jar file and Google gson library.</a> 
