--- a/views/docs/docs_layout.jade
+++ b/views/docs/docs_layout.jade
@@ -30,19 +30,15 @@ html
 			section.top-bar-section
 				ul.right.main_cleanformatting
 					li
+						a(href="/modules") Modules
+					li
 						a(href="/prices") Prices
 					li
-						a(href="/faq") FAQ
-
-					li
 						a(href="/api_docs") API & Docs
-
-					li
-						a(href="/modules") Modules
-
+					li		
+						a(href="http://blog.zzish.com") Blog
 					li
 						a(href="/login") Sign In
-
 					li
 						a(href="mailto:developers@zzish.com") Contact Us
 
