--- a/views/docs/iosguide.jade
+++ b/views/docs/iosguide.jade
@@ -1,7 +1,7 @@
 extends docs_layout
 
 block content
-	div.row
+	div.row.main_cleanformatting_invert
 		hr
 
 		h1(align="center") #{platform}-#{type}
@@ -17,7 +17,7 @@ block content
 				<hr>
 
 				<h6>Step 1 - Download the latest Zzish e-mbaas-ador framework</h6>
-				<p>Here's the link: <a href="http://platform.zzish.com/resources/sdk/PlatformSDK.framework.zip">http://platform.zzish.com/resources/sdk/PlatformSDK.framework.zip</a></p>
+				<p>Here's the link: <a style="color: #000000" href="http://platform.zzish.com/resources/sdk/PlatformSDK.framework.zip">http://platform.zzish.com/resources/sdk/PlatformSDK.framework.zip</a></p>
 				
 				<hr>
 
