--- a/views/docs/restapi.jade
+++ b/views/docs/restapi.jade
@@ -1,7 +1,7 @@
 extends docs_layout
 
 block content
-	div.row
+	div.row.main_cleanformatting_invert
 		hr
 
 		h1(align="center") #{platform}-#{type}
@@ -390,14 +390,14 @@ block content
 				<pre>
 				&#123;
 				"appId" : "1234asdfa2342342asfd",
-				'deviceId': "123123sdafsdf23423423",
-				'userId': 123&#44;
-				'name': "Noah",
-				'dob': 123554444&#44;
-				'gender': 1&#44;
-				'latitude': 50.12133&#44;
-				'longitude': 0.20000&#44;
-				'attributes': &#91;
+				deviceId: "123123sdafsdf23423423",
+				userId: 123&#44;
+				name: "Noah",
+				dob: 123554444&#44;
+				gender: 1&#44;
+				latitude: 50.12133&#44;
+				longitude: 0.20000&#44;
+				attributes: &#91;
 				&#123"name" : shirt_colour, value: yellow&#125;,
 				&#123"name" : hair_colour, value: blue&#125;
 				&#93;
@@ -448,15 +448,15 @@ block content
 
 				<pre>
 				&#123;
-				"appId" : "1234asdfa2342342asfd", &#182;
-				'deviceId': "123123sdafsdf23423423", &#182;
-				'userId': ABCD123&#44; 
-				'name': "Noah",
-				'dob': 123554444&#44;
-				'gender': 1&#44;
-				'latitude': 50.12133&#44;
-				'longitude': 0.20000&#44;
-				'attributes': &#91;
+				"appId" : "1234asdfa2342342asfd",
+				deviceId: "123123sdafsdf23423423",
+				userId: ABCD123&#44;
+				name: "Noah",
+				dob: 123554444&#44;
+				gender: 1&#44;
+				latitude: 50.12133&#44;
+				longitude: 0.20000&#44;
+				attributes: &#91;
 				&#123"name" : shirt_colour, value: yellow&#125;,
 				&#123"name" : hair_colour, value: blue&#125;
 				&#93;
