--- a/views/modules/learninganalytics.jade
+++ b/views/modules/learninganalytics.jade
@@ -1,4 +1,4 @@
-extends ../promotion_layout
+extends ../web/promotion_layout
 
 block content
 
@@ -48,8 +48,9 @@ block content
 			h2 Key Features
 
 			div.main_formatting.small-10.large-centered.columns
-				li Benchmarks by topic area for individuals
-				li Integrates seamlessly with our classroom ready module to provide class level data within the teacher dashboard.
+				ol
+					li Absolute vs Relative Benchmarks
+					li Classroom Integration
 
 
 			hr
@@ -72,5 +73,8 @@ block content
 			div.row
 				div.small-8.large-centered.columns
 					h4(align="center")	The same benchmarks in relative form.
-					img(src="/img/graphs/learninganalytics_1.png")
+					img(src="/img/graphs/learninganalytics_2.png")
 
+			h3 Classroom Integration
+
+			p Our Learning Analytics integrates seamlessly with our Classroom ready feature. Students get their classroom data and can compare/merge with their home data. Children also get simplified views to help them focus their efforts which the parents get more detailed views. 
