--- a/views/platform.jade
+++ b/views/platform.jade
@@ -12,7 +12,7 @@ block content
 
 			hr
 
-			p <a href="/api_docs" style="color: #000000;"> #{platform} </a>
+			p <a href="/api_docs" style="color: #000000;"> #{path} </a>
 
 			div.small-4.large-centered.columns
 				div.large-6.columns#guide_icon
