--- a/views/profile/home.jade
+++ b/views/profile/home.jade
@@ -83,7 +83,7 @@ block content
 							a(href="/api_docs/ios/guide#option1" style="color:#000000;") Option 1 - Extending PlatformViewController <br>
 							a(href="/api_docs/ios/guide#option2" style="color:#000000;") Option 2 - Custom initialisation
 
-					a(href="")#guide_link
+					a(href="/profile/apps")
 						button.action-button.submitbutton Game on!
 
 				fieldset
