--- a/views/profile/profile.jade
+++ b/views/profile/profile.jade
@@ -22,7 +22,7 @@ block content
 			div.row
 
 				hr
-				img(src="http://www.flaticon.com/png/256/128.png" height="20" width="20" onclick="edit_profile();" align="right")
+				//img(src="http://www.flaticon.com/png/256/128.png" height="20" width="20" onclick="edit_profile();" align="right")
 
 
 			form(name="input" action="/profile/update" method="post").styletext
