--- a/views/docs/restguide.jade
+++ b/views/docs/restguide.jade
@@ -1,7 +1,7 @@
 extends docs_layout
 
 block content
-	div.row
+	div.row.main_cleanformatting_invert
 		hr
 
 		h1(align="center") #{platform}-#{type}
