--- a/views/modules/classroomready.jade
+++ b/views/modules/classroomready.jade
@@ -1,4 +1,4 @@
-extends ../promotion_layout
+extends ../web/promotion_layout
 
 block content
 
@@ -49,9 +49,12 @@ block content
 
 			div.main_formatting.small-10.large-centered.columns
 				ol
-					li Student Logins so that individual student activity can be recorded
-					li Teacher Dashboard so that teachers can view the activity of students
-					li Parent Dashboard so that parents can view the activity of students
+					li
+						a(href="#loginLink" style="color: #74B4FE") Classroom and Home Logins for Student
+					li 
+						a(href="#teacherDashboardLink" style="color: #74B4FE") Teacher Dashboard
+					li 
+						a(href="#parentDashboardLink" style="color: #74B4FE") Parent Dashboard
 
 
 			hr
@@ -62,9 +65,9 @@ block content
 
 			p The Classroom Ready module works closely with our Analytics (for recording student activity) and Gamification modules (for setting up multiplayer classroom games) to provide a full solution.
 
-			h3 Student Logins
+			h3#loginLink Classroom and Home Logins for Student
 
-			p Managing student logins is a complex process that we make incredibly simple for developers   The Classroom Ready module provides easy mechanisms for teachers to create and manage classes direct from your mobile app or using a web interface on a desktop computer.
+			p Managing student logins is a complex process that we make incredibly simple for developers. The Classroom Ready module provides easy mechanisms for teachers to create and manage classes direct from your mobile app or using a web interface on a desktop computer.
 
 			p We provide two mechanisms for teachers to set up class lists.   Teachers can enter the names of students into the system and give out login credentials to students (best for 7-11 year old classes) or teachers can distribute a class code to students and students can create their own login credentials and then join the class (best for 11+ classes).
 
@@ -72,7 +75,7 @@ block content
 
 			p The Classroom Ready module also provides our patent pending mechanism for teachers to automatically configure your app for use by students in the classroom (students can then simply select their names from a list in the app).
 
-			h3 Teacher Dashboard
+			h3#teacherDashboardLink Teacher Dashboard
 			
 			p The teacher dashboard provides a number of powerful features for integrating with you app and comprises several key areas:
 
@@ -82,8 +85,8 @@ block content
 
 			p The portfolio area lets teachers see in-progress or completed works that students publish to their portfolio from your app. The completed work can be either text, an image or your own custom html.
 
-			p Teachers can also display live captures screenshots from tablets being used in the classroom for display on the electronic whiteboard.
+			p Teachers can also display screenshots from tablets being used in the classroom for display on the electronic whiteboard.
 
-			h3 Parent Dashboard
+			h3#parentDashboardLink Parent Dashboard
 			
 			p For students who are children, teachers can enable parent logins and access to the parent dashboard, which lets parents see data from the dashboard for their child, such as their child’s activity in your app and their portfolio from your app.
