--- a/views/modules.jade
+++ b/views/modules.jade
@@ -11,7 +11,7 @@ block content
 
 			hr
 
-			p We have six powerful modules that you can use independently or all together to add rich learning features to your app.  You can be up and running with all of them in just a few hours!
+			p We have six powerful modules that you can use independently or all together to add rich learning features to your app.  And you can be up and running with all of them in just a few hours!
 
 			p &nbsp;
 
